# healer-network

./: .gitignore  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  build-docker.ps1  build-docker.sh  cleanup-docker.ps1  debug-docker.sh  network.toml  other_commands.sh  results.md  run-docker.ps1  run-docker.sh  setup-permissions.sh  start-node.sh  test-connection.sh  test-node.sh  troubleshoot-docker.ps1  troubleshoot-docker.sh  vps-setup.sh  zombienet-omni-node.toml  zombienet.toml
.github/workflows/: ci.yml  pr-reminder.yml  release.yaml  release.yml
meter/: index.js  package.json
meter/meter-results/: metrics-2025-04-22T03-40-25-937Z.csv
node/: Cargo.toml  README.md  build.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
old_meter/: index.js  package-lock.json  package.json
pallets/: README.md
pallets/ai-prediction/: Cargo.toml
pallets/ai-prediction/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/healer-network/: Cargo.toml  README.md
pallets/healer-network-template/src/: benchmarking.rs  mock.rs  weights.rs
pallets/healer-network/src/: benchmarking.rs  lib.rs  mock.rs  test.rs  weights.rs
pallets/medical-appointment/: Cargo.toml
pallets/medical-appointment/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/medical-record/: Cargo.toml  README.md
pallets/medical-record/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/pallet-healer-network-template/: Cargo.toml
pallets/pallet-healer-network-template/src/: lib.rs  tests.rs
pallets/pallet-poh/: Cargo.toml
pallets/pallet-poh/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/poh/: Cargo.toml
pallets/poh/src/: benchmarking.rs  lib.rs  mock.rs  test.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml  README.md  build.rs  rustc-ice-2025-04-20T03_27_37-12159.txt
runtime/src/: benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
spammer/: package.json  pnpm-lock.yaml  real_time_remark.js  real_time_tka.js  stps.js
