[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-minimal-template.git"
edition = "2021"

[workspace]
default-members = ["pallets/healer-network", "pallets/poh", "runtime"]
members = ["node", "pallets/healer-network", "pallets/poh", "runtime"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.13" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
futures-timer = { version = "3.0.2" }
jsonrpsee = { version = "0.24.3" }
serde_json = { version = "1.0.132", default-features = false }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.1", default-features = false }

# Local dependencies
healer-network-runtime = { path = "./runtime", default-features = false }
pallet-healer-network = { path = "./pallets/healer-network", default-features = false }
pallet-poh = { path = "./pallets/poh", default-features = false }

# Polkadot SDK dependencies
polkadot-sdk = { version = "0.12.2", default-features = false }
