[package]
name = "healer-network-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
polkadot-sdk = { workspace = true, features = [
	"pallet-balances",
	"pallet-sudo",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",

	"runtime",
] }
serde_json = { workspace = true, default-features = false, features = [
	"alloc",
] }

# Local dependencies
pallet-healer-network.workspace = true
# pallet-poh.workspace = true

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = [
	"substrate-wasm-builder",
] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde_json/std",
	"polkadot-sdk/std",
	"pallet-healer-network/std",
	# "pallet-poh/std",
]
