[package]
name = "pallet-poh"
authors = ["Anonymous"]
description = "Frame Pallet"
version = "0.1.0"
license = "Unlicense"
edition.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }

frame-support = { version = "38.2.0", default-features = false }

frame = { version = "0.3.0", package = "polkadot-sdk-frame", default-features = false, features = [
	"experimental",
	"runtime",
] }


[features]
default = ["std"]
std = ["codec/std", "frame/std", "scale-info/std", "frame-support/std"]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]
try-runtime = ["frame/try-runtime", "frame-support/try-runtime"]
